[package]
name = "rc"
version = "0.1.0"
edition = "2024"
authors = ["Sergey Lyskov"]
description = "Command line tool to run various biomolecular structural prediction, analysis and design applications"

[features]
test-docker = []

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
strum = { version = "0.27.2", features = ["derive"] }
yansi = "1.0.1"

[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[dev-dependencies]
assert_cmd = { version = "2.1.1", features = ["color"] }
assert_fs = { version = "1.1.3", features = ["color"] }
predicates = "3.1.3"
reqwest = { version = "0.12.24", features = ["blocking"] }


# [[test]]
# name = "test-docker"
# path = "tests/docker.rs"
# required-features = ["test-docker"]
